--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/email_input"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:hint="Employee ID  or Applicant Email"
+                android:hint="Applicant Email"
                 android:inputType="text"
                 android:fontFamily="@font/urbanist"
                 android:elevation="4dp"
