--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -147,6 +147,19 @@
                 android:layout_centerHorizontal="true"
                 android:fontFamily="@font/urbanist" />
 
+            <!-- Verify Account Link -->
+            <TextView
+                android:id="@+id/verify_account_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Need to verify your account?"
+                android:textColor="@color/blue"
+                android:textSize="16sp"
+                android:layout_below="@id/registerLink"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/urbanist" />
+
         </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
