--- a/app/src/main/res/layout/fragment_job_detail.xml
+++ b/app/src/main/res/layout/fragment_job_detail.xml
@@ -34,17 +34,30 @@
             tools:text="Senior Software Engineer" />
 
         <TextView
-            android:id="@+id/companyName"
+            android:id="@+id/universityName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/urbanist_medium"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/urbanist"
+            android:textColor="@color/pink"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/jobTitle"
-            tools:text="UniTech Inc." />
+            tools:text="Example University" />
+
+        <TextView
+            android:id="@+id/companyName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/urbanist"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/universityName"
+            tools:text="Example Company" />
 
         <TextView
             android:id="@+id/location"
